Taulukoiden populointi ja tietokannan käyttö sujuu. Hibernate configiin lisätty yksi parametri, joka mahdollisti OneToMany-toiminnot. Javadoc-kommentteja lisätty. Taulukoiden päivityspainikkeet lisätty. Uusien rivien lisäys toimii.

--- a/src/main/resources/fxml/KayttajaAdmin.fxml
+++ b/src/main/resources/fxml/KayttajaAdmin.fxml
@@ -22,8 +22,8 @@
   <rowConstraints>
       <RowConstraints maxHeight="564.8" minHeight="10.0" prefHeight="123.19999847412107" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="564.8" minHeight="10.0" prefHeight="81.60000000000002" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="855.1999755859375" minHeight="10.0" prefHeight="823.2000000000002" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="187.2000488281251" minHeight="0.0" prefHeight="178.4000000000001" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="892.2000122070314" minHeight="10.0" prefHeight="772.0000122070313" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="187.2000488281251" minHeight="0.0" prefHeight="162.39998779296866" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="209.60002441406255" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
@@ -50,11 +50,6 @@
             <DatePicker fx:id="datePicker" disable="true" opacity="0.0" prefHeight="35.0" prefWidth="330.0" />
          </children>
       </VBox>
-      <Button fx:id="tallennaBtn" alignment="CENTER" mnemonicParsing="false" onMouseClicked="#tallennaBtnPainettu" prefHeight="71.0" prefWidth="446.0" text="TALLENNA MUUTOKSET" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER">
-         <font>
-            <Font name="System Bold" size="32.0" />
-         </font>
-      </Button>
       <GridPane prefHeight="123.0" prefWidth="1541.0" GridPane.columnSpan="2147483647">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="196.1999755859375" minWidth="10.0" prefWidth="196.1999755859375" />
@@ -104,6 +99,7 @@
             <Insets right="50.0" />
          </GridPane.margin>
       </GridPane>
+      <Button fx:id="updateBtn" mnemonicParsing="false" onMouseClicked="#updateBtnPainettu" text="PÄIVITÄ TAULUKKO" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
    </children>
    <padding>
       <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
