--- a/src/main/resources/fxml/VarausAdmin.fxml
+++ b/src/main/resources/fxml/VarausAdmin.fxml
@@ -11,13 +11,13 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="876.0" prefWidth="1772.0" style="-fx-background-image: url(&quot;/bgLarge.png&quot;);" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1" fx:controller="View.VarausAdminController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="876.0" prefWidth="1772.0" style="-fx-background-image: url(&quot;/bgLarge.png&quot;);" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.VarausAdminController">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="116.79998779296875" minWidth="4.800003814697259" prefWidth="83.20000610351562" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.99999618530273" minWidth="0.0" prefWidth="218.39999389648438" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="520.6000244140625" minWidth="10.0" prefWidth="514.2" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="248.4000366210937" minWidth="10.0" prefWidth="102.19999999999993" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="696.0" minWidth="10.0" prefWidth="619.1999755859375" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="520.6000244140625" minWidth="10.0" prefWidth="479.2" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="248.4000366210937" minWidth="10.0" prefWidth="170.39999999999998" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="696.0" minWidth="10.0" prefWidth="586.4000488281249" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="472.0" minWidth="0.0" prefWidth="114.4000244140625" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="157.0" minWidth="0.0" prefWidth="70.40000000000009" />
   </columnConstraints>
@@ -80,6 +80,7 @@
          </GridPane.margin>
       </Button>
       <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="4" />
+      <Button fx:id="updateBtn" mnemonicParsing="false" onMouseClicked="#updateBtnPainettu" text="PÄIVITÄ TAULUKKO" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
    </children>
    <padding>
       <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
