--- a/src/main/resources/fxml/nakyma.fxml
+++ b/src/main/resources/fxml/nakyma.fxml
@@ -36,10 +36,10 @@
    </columnConstraints>
    <rowConstraints>
       <RowConstraints maxHeight="52.79999389648438" minHeight="10.0" prefHeight="49.59999084472656" valignment="BOTTOM" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="150.00000610351563" minHeight="0.0" prefHeight="16.80000915527343" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="312.80000000000007" minHeight="0.0" prefHeight="85.59998779296878" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="615.0000122070312" minHeight="10.0" prefHeight="615.0000122070312" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="95.80002441406248" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="150.00000610351563" minHeight="0.0" prefHeight="27.99999389648437" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="312.80000000000007" minHeight="0.0" prefHeight="75.20000610351562" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="615.0000122070312" minHeight="10.0" prefHeight="559.8000122070313" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="95.80002441406248" minHeight="0.0" prefHeight="54.999987792968795" vgrow="SOMETIMES" />
    </rowConstraints>
    <children>
       <Label fx:id="usernameLabel" alignment="CENTER_RIGHT" prefHeight="54.0" prefWidth="454.0" text="USERINFO" textFill="WHITE" GridPane.columnIndex="3" GridPane.columnSpan="4" GridPane.halignment="RIGHT">
@@ -160,6 +160,14 @@
                   <Insets top="25.0" />
                </VBox.margin>
             </Button>
+            <Button fx:id="poistaresurssiBtn" mnemonicParsing="false" onMouseClicked="#poistaresurssiNappiPainettu" prefHeight="39.0" prefWidth="348.0" text="POISTA RESURSSI">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="25.0" />
+               </VBox.margin>
+            </Button>
          </children>
          <padding>
             <Insets left="10.0" right="10.0" />
@@ -189,6 +197,7 @@
             <Insets top="5.0" />
          </GridPane.margin>
       </HBox>
+      <Button fx:id="updateBtn" mnemonicParsing="false" onMouseClicked="#updateBtnPainettu" text="PÄIVITÄ TAULUKKO" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
    </children>
    <padding>
       <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
