--- a/src/main/resources/fxml/KayttajaAdmin.fxml
+++ b/src/main/resources/fxml/KayttajaAdmin.fxml
@@ -14,10 +14,10 @@
 
 <GridPane id="bgPane" prefHeight="1166.0" prefWidth="2044.0" style="-fx-background-image: url(&quot;/bgLarge.png&quot;);" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.KayttajaAdminController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.8" minWidth="0.0" prefWidth="123.19998779296874" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1567.6000244140625" minWidth="10.0" prefWidth="1431.8" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="291.0" minWidth="0.0" prefWidth="29.599902343750045" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="416.80002441406236" minWidth="10.0" prefWidth="412.00009765624986" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="568.8" minWidth="0.0" prefWidth="384.6000061035156" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="1567.6000244140625" minWidth="10.0" prefWidth="1033.3999938964844" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="317.60009765625" minWidth="0.0" prefWidth="210.39995117187505" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="416.80002441406236" minWidth="10.0" prefWidth="366.99995117187495" />
   </columnConstraints>
   <rowConstraints>
       <RowConstraints maxHeight="564.8" minHeight="10.0" prefHeight="123.19999847412107" vgrow="SOMETIMES" />
@@ -27,12 +27,12 @@
     <RowConstraints maxHeight="209.60002441406255" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <TableView fx:id="kayttajaTableView" editable="true" maxWidth="-Infinity" prefHeight="767.0" prefWidth="1434.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <TableView fx:id="kayttajaTableView" editable="true" maxWidth="-Infinity" prefHeight="767.0" prefWidth="1002.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <columns>
-            <TableColumn fx:id="nimiColumn" onEditCommit="#nimiEditCommit" prefWidth="613.5999786257744" resizable="false" text="NIMI" />
-            <TableColumn fx:id="kayttajatunnusColumn" onEditCommit="#kayttajatunnusEditCommit" prefWidth="164.0" text="KÄYTTÄJÄTUNNUS" />
-            <TableColumn fx:id="emailColumn" onEditCommit="#emailEditCommit" prefWidth="553.6000366210938" resizable="false" text="SÄHKÖPOSTI" />
-            <TableColumn fx:id="valtuudetColumn" maxWidth="96.800048828125" minWidth="90.0" onEditCommit="#valtuudetEditCommit" prefWidth="96.800048828125" resizable="false" text="VALTUUDET" />
+            <TableColumn fx:id="nimiColumn" onEditCommit="#nimiEditCommit" prefWidth="322.39999693632126" resizable="false" text="NIMI" />
+            <TableColumn fx:id="kayttajatunnusColumn" onEditCommit="#kayttajatunnusEditCommit" prefWidth="175.20001220703125" text="KÄYTTÄJÄTUNNUS" />
+            <TableColumn fx:id="emailColumn" onEditCommit="#emailEditCommit" prefWidth="289.5999755859375" resizable="false" text="SÄHKÖPOSTI" />
+            <TableColumn fx:id="valtuudetColumn" maxWidth="459.20001220703125" minWidth="90.0" onEditCommit="#valtuudetEditCommit" prefWidth="209.60003662109375" resizable="false" text="VALTUUDET" />
          </columns>
       </TableView>
       <VBox prefHeight="767.0" prefWidth="372.0" spacing="25.0" GridPane.columnIndex="3" GridPane.rowIndex="2">
