--- a/src/main/resources/fxml/Loginwindow.fxml
+++ b/src/main/resources/fxml/Loginwindow.fxml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -22,7 +24,15 @@
             <ImageView fx:id="logoView" fitHeight="300.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true" />
             <VBox alignment="CENTER" prefHeight="107.0" prefWidth="476.0">
                <children>
-                  <TextField id="usernameField" fx:id="usernameField" onKeyReleased="#checkVal" prefHeight="44.0" prefWidth="442.0" promptText="Käyttäjänimi" >
+                  <Label fx:id="usernameLabel" alignment="BOTTOM_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="200.0" text="Käyttäjänimi" textFill="WHITE" textOverrun="CLIP">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets right="450.0" top="90.0" />
+                     </VBox.margin>
+                  </Label>
+                  <TextField id="usernameField" fx:id="usernameField" onKeyReleased="#checkVal" prefHeight="44.0" prefWidth="442.0" promptText="Käyttäjänimi">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -30,14 +40,30 @@
                         <Insets />
                      </opaqueInsets>
                      <VBox.margin>
-                        <Insets bottom="30.0" top="100.0" />
+                        <Insets bottom="30.0" top="10.0" />
                      </VBox.margin>
                   </TextField>
+                  <Label fx:id="passwordLabel" alignment="BOTTOM_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="200.0" text="Salasana" textFill="WHITE" textOverrun="CLIP">
+                     <font>
+                        <Font name="System Bold" size="18.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets right="450.0" />
+                     </VBox.margin>
+                  </Label>
                   <PasswordField fx:id="passwordField" alignment="TOP_LEFT" onKeyReleased="#checkVal" prefHeight="44.0" prefWidth="442.0" promptText="Salasana">
                      <font>
                         <Font size="20.0" />
                      </font>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
                   </PasswordField>
+                  <Button mnemonicParsing="false" onMouseClicked="#avaaPalautaSalasana" text="PALAUTA SALASANA" underline="true">
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                  </Button>
                </children>
                <padding>
                   <Insets bottom="150.0" top="75.0" />
