--- a/src/main/resources/fxml/nakyma.fxml
+++ b/src/main/resources/fxml/nakyma.fxml
@@ -51,7 +51,7 @@
          </GridPane.margin>
       </Label>
       <ImageView fx:id="logoView" fitHeight="138.0" fitWidth="483.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.rowSpan="2" />
-      <TextField fx:id="searchBar" prefHeight="39.0" prefWidth="1149.0" promptText="Etsi..." onKeyReleased="#searchFunction" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2">
+      <TextField fx:id="searchBar" onKeyReleased="#searchFunction" prefHeight="39.0" prefWidth="1149.0" promptText="Etsi..." GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2">
          <font>
             <Font size="18.0" />
          </font>
@@ -75,7 +75,7 @@
             <Insets />
          </GridPane.margin>
       </ChoiceBox>
-      <Button fx:id="searchBtn" mnemonicParsing="false" prefHeight="40.0" prefWidth="86.0" text="HAE" onMouseClicked="#searchFunction" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+      <Button fx:id="searchBtn" mnemonicParsing="false" onMouseClicked="#searchFunction" prefHeight="40.0" prefWidth="86.0" text="HAE" GridPane.columnIndex="4" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
@@ -113,8 +113,8 @@
                               <TableColumn fx:id="paattymispvmColumn" prefWidth="232.00006103515625" resizable="false" text="VARAUKSEN PÄÄTTYMISPVM" />
                               <TableColumn fx:id="varausidColumn" editable="false" prefWidth="120.79998779296875" resizable="false" text="VARAUSID" />
                               <TableColumn fx:id="varauskuvausColumn" onEditCommit="#kuvausOnEditCommit" prefWidth="365.59991455078125" resizable="false" text="KUVAUS" />
-                              <TableColumn fx:id="palautettuColumn" maxWidth="227.0" minWidth="0.0" prefWidth="172.0" resizable="false" text="AKTIIVISUUS" />
-                              <TableColumn fx:id="hyvaksyntaColumn" maxWidth="330.39990234375" minWidth="0.0" prefWidth="100.0" resizable="false" text="HYVÄKSYNTÄ" />
+                              <TableColumn fx:id="palautettuColumn" maxWidth="227.0" minWidth="0.0" prefWidth="141.5999755859375" resizable="false" text="AKTIIVISUUS" />
+                              <TableColumn fx:id="hyvaksyntaColumn" maxWidth="330.39990234375" minWidth="0.0" prefWidth="130.4000244140625" resizable="false" text="HYVÄKSYNTÄ" />
                            </columns>
                            <columnResizePolicy>
                               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -202,7 +202,6 @@
             <Insets top="5.0" />
          </GridPane.margin>
       </HBox>
-      <Button fx:id="updateBtn" mnemonicParsing="false" onMouseClicked="#updateBtnPainettu" text="PÄIVITÄ TAULUKKO" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
    </children>
    <padding>
       <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
