--- a/src/main/resources/fxml/uusiKayttaja.fxml
+++ b/src/main/resources/fxml/uusiKayttaja.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
@@ -26,7 +27,7 @@
                 <Font name="Arial Black" size="15.0" />
             </font>
         </Button>
-        <TextField fx:id="emailTextField" layoutX="55.0" layoutY="188.0" prefHeight="37.0" prefWidth="500.0" promptText="Sähköpostiosoite">
+        <TextField fx:id="emailTextField" layoutX="57.0" layoutY="329.0" prefHeight="37.0" prefWidth="500.0" promptText="Sähköpostiosoite">
             <font>
                 <Font size="16.0" />
             </font>
@@ -36,7 +37,7 @@
                 <Font size="18.0" />
             </font>
         </Label>
-        <Label fx:id="vanhasalasanaLabel" layoutX="59.0" layoutY="161.0" text="SÄHKÖPOSTIOSOITE" textFill="WHITE">
+        <Label fx:id="vanhasalasanaLabel" layoutX="61.0" layoutY="302.0" text="SÄHKÖPOSTIOSOITE" textFill="WHITE">
             <font>
                 <Font size="18.0" />
             </font>
@@ -66,22 +67,22 @@
                 <Font size="30.0" />
             </font>
         </Label>
-        <TextField fx:id="salasanaTextField" layoutX="54.0" layoutY="263.0" prefHeight="37.0" prefWidth="500.0" promptText="Salasana">
+        <PasswordField fx:id="salasanaTextField" layoutX="55.0" layoutY="258.0" prefHeight="37.0" prefWidth="500.0" promptText="Salasana">
             <font>
                 <Font size="16.0" />
             </font>
-        </TextField>
-        <Label fx:id="vanhasalasanaLabel1" layoutX="58.0" layoutY="236.0" text="SALASANA" textFill="WHITE">
+        </PasswordField>
+        <Label fx:id="vanhasalasanaLabel1" layoutX="59.0" layoutY="231.0" text="SALASANA" textFill="WHITE">
             <font>
                 <Font size="18.0" />
             </font>
         </Label>
-        <TextField fx:id="kayttajatunnusTextField" layoutX="54.0" layoutY="338.0" prefHeight="37.0" prefWidth="500.0" promptText="Käyttäjätunnus">
+        <TextField fx:id="kayttajatunnusTextField" layoutX="57.0" layoutY="185.0" prefHeight="37.0" prefWidth="500.0" promptText="Käyttäjätunnus">
             <font>
                 <Font size="16.0" />
             </font>
         </TextField>
-        <Label fx:id="vanhasalasanaLabel11" layoutX="58.0" layoutY="311.0" text="KÄYTTÄJÄTUNNUS" textFill="WHITE">
+        <Label fx:id="vanhasalasanaLabel11" layoutX="61.0" layoutY="158.0" text="KÄYTTÄJÄTUNNUS" textFill="WHITE">
             <font>
                 <Font size="18.0" />
             </font>
