--- a/src/main/resources/fxml/Loginwindow.fxml
+++ b/src/main/resources/fxml/Loginwindow.fxml
@@ -43,15 +43,7 @@
                         <Insets bottom="30.0" top="10.0" />
                      </VBox.margin>
                   </TextField>
-                  <Label fx:id="passwordLabel" alignment="BOTTOM_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="200.0" text="Salasana" textFill="WHITE" textOverrun="CLIP">
-                     <font>
-                        <Font name="System Bold" size="18.0" />
-                     </font>
-                     <VBox.margin>
-                        <Insets right="450.0" />
-                     </VBox.margin>
-                  </Label>
-                  <PasswordField fx:id="passwordField" alignment="TOP_LEFT" onKeyReleased="#checkVal" prefHeight="44.0" prefWidth="442.0" promptText="Salasana">
+                  <PasswordField fx:id="passwordField" alignment="TOP_LEFT" onKeyReleased="#checkVal" prefHeight="44.0" prefWidth="442.0" promptText="Salasana" stylesheets="@../styles/Styles.css">
                      <font>
                         <Font size="20.0" />
                      </font>
