--- a/src/main/resources/fxml/VarausAdmin.fxml
+++ b/src/main/resources/fxml/VarausAdmin.fxml
@@ -3,27 +3,30 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="876.0" prefWidth="1772.0" style="-fx-background-image: url(&quot;/bgLarge.png&quot;);" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.VarausAdminController">
   <columnConstraints>
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="116.79998779296875" minWidth="4.800003814697259" prefWidth="83.20000610351562" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.99999618530273" minWidth="0.0" prefWidth="218.39999389648438" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="116.79998779296875" minWidth="4.800003814697259" prefWidth="40.800018310546875" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.99999618530273" minWidth="0.0" prefWidth="261.5999816894531" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="520.6000244140625" minWidth="10.0" prefWidth="479.2" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="248.4000366210937" minWidth="10.0" prefWidth="170.39999999999998" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="696.0" minWidth="10.0" prefWidth="586.4000488281249" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="472.0" minWidth="0.0" prefWidth="114.4000244140625" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="696.0" minWidth="10.0" prefWidth="660.00009765625" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="472.0" minWidth="0.0" prefWidth="43.199902343749955" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="157.0" minWidth="0.0" prefWidth="70.40000000000009" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="239.59999389648436" minHeight="10.0" prefHeight="92.2000198364258" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="269.59998016357423" minHeight="10.0" prefHeight="269.59998016357423" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="239.59999389648436" minHeight="10.0" prefHeight="157.0000045776367" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="269.59998016357423" minHeight="10.0" prefHeight="206.39999542236333" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="428.7999755859375" minHeight="10.0" prefHeight="373.59996337890624" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="122.39999999999998" minHeight="10.0" prefHeight="68.00003662109373" vgrow="SOMETIMES" />
   </rowConstraints>
@@ -41,20 +44,11 @@
             <Insets left="25.0" right="25.0" />
          </GridPane.margin>
       </Button>
-      <Label fx:id="bizName" alignment="CENTER" contentDisplay="CENTER" prefHeight="54.0" prefWidth="685.0" text="YRITYS OY" textFill="WHITE" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="CENTER">
+      <Label fx:id="bizName" alignment="CENTER_RIGHT" contentDisplay="CENTER" prefHeight="54.0" prefWidth="685.0" text="YRITYS OY" textFill="WHITE" GridPane.columnIndex="2" GridPane.columnSpan="2" GridPane.halignment="RIGHT">
          <font>
             <Font name="System Bold" size="36.0" />
          </font>
       </Label>
-      <TableView fx:id="varauksetTableView" editable="true" maxWidth="-Infinity" prefHeight="662.0" prefWidth="1452.0" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="1" GridPane.rowSpan="2">
-         <columns>
-            <TableColumn fx:id="nimiColumn" prefWidth="288.80003356933594" resizable="false" text="VARAAJAN NIMI" />
-            <TableColumn fx:id="tavaraColumn" prefWidth="412.0000305175781" resizable="false" text="TAVARA" />
-            <TableColumn fx:id="alkupvmColumn" minWidth="0.0" onEditCommit="#alkupvmEditCommit" prefWidth="184.0" resizable="false" text="ALKUPVM" />
-            <TableColumn fx:id="paattymispvmColumn" minWidth="0.0" onEditCommit="#paattymispvmEditCommit" prefWidth="184.0" resizable="false" text="PÄÄTTYMISPVM" />
-            <TableColumn fx:id="kuvausColumn" maxWidth="500.0" onEditCommit="#kuvausEditCommit" prefWidth="376.0" resizable="false" text="KUVAUS" />
-         </columns>
-      </TableView>
       <Button fx:id="takaisinBtn" mnemonicParsing="false" onMouseClicked="#takaisinBtnPainettu" prefHeight="35.0" prefWidth="97.0" text="TAKAISIN" GridPane.columnIndex="1" GridPane.halignment="LEFT">
          <font>
             <Font name="System Bold" size="14.0" />
@@ -80,6 +74,50 @@
          </GridPane.margin>
       </Button>
       <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="4" />
+      <TabPane fx:id="tabPane" prefHeight="600.0" prefWidth="1534.0" tabClosingPolicy="UNAVAILABLE" GridPane.columnIndex="1" GridPane.columnSpan="4" GridPane.rowIndex="1" GridPane.rowSpan="2">
+         <tabs>
+            <Tab fx:id="kasittelemattomatTab" text="Käsittelemättömät varaukset">
+               <content>
+                  <StackPane fx:id="kaikkiStack" prefHeight="530.0" prefWidth="1585.0">
+                     <children>
+                        <TableView fx:id="varauksetTableView" editable="true" maxWidth="-Infinity" prefHeight="662.0" prefWidth="1452.0">
+                           <columns>
+                              <TableColumn fx:id="nimiColumn" prefWidth="288.80003356933594" resizable="false" text="VARAAJAN NIMI" />
+                              <TableColumn fx:id="tavaraColumn" prefWidth="412.0000305175781" resizable="false" text="TAVARA" />
+                              <TableColumn fx:id="alkupvmColumn" minWidth="0.0" onEditCommit="#alkupvmEditCommit" prefWidth="184.0" resizable="false" text="ALKUPVM" />
+                              <TableColumn fx:id="paattymispvmColumn" minWidth="0.0" onEditCommit="#paattymispvmEditCommit" prefWidth="184.0" resizable="false" text="PÄÄTTYMISPVM" />
+                              <TableColumn fx:id="kuvausColumn" maxWidth="500.0" onEditCommit="#kuvausEditCommit" prefWidth="376.0" resizable="false" text="KUVAUS" />
+                           </columns>
+                        </TableView>
+                     </children>
+                  </StackPane>
+               </content>
+            </Tab>
+            <Tab fx:id="kaikkiTab" closable="false" text="Kaikki varaukset">
+               <content>
+                  <StackPane fx:id="omatStack" prefHeight="530.0" prefWidth="981.0">
+                     <children>
+                        <TableView fx:id="omatTable" maxWidth="-Infinity" prefHeight="570.0" prefWidth="1567.0">
+                           <columns>
+                              <TableColumn fx:id="varaajannimiColumn" prefWidth="75.0" text="VARAAJAN NIMI" />
+                              <TableColumn fx:id="laitenimiColumn" editable="false" prefWidth="289.60010319948196" text="LAITTEEN NIMI" />
+                              <TableColumn fx:id="alkupvmColumn1" prefWidth="204.7999267578125" resizable="false" text="VARAUKSEN ALKUPVM" />
+                              <TableColumn fx:id="paattymispvmColumn1" prefWidth="232.00006103515625" resizable="false" text="VARAUKSEN PÄÄTTYMISPVM" />
+                              <TableColumn fx:id="varausidColumn" editable="false" prefWidth="120.79998779296875" resizable="false" text="VARAUSID" />
+                              <TableColumn fx:id="varauskuvausColumn" onEditCommit="#kuvausOnEditCommit" prefWidth="365.59991455078125" resizable="false" text="KUVAUS" />
+                              <TableColumn fx:id="palautettuColumn" maxWidth="227.0" minWidth="0.0" prefWidth="141.5999755859375" resizable="false" text="AKTIIVISUUS" />
+                              <TableColumn fx:id="hyvaksyntaColumn" maxWidth="330.39990234375" minWidth="0.0" prefWidth="130.4000244140625" resizable="false" text="HYVÄKSYNTÄ" />
+                           </columns>
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                     </children>
+                  </StackPane>
+               </content>
+            </Tab>
+         </tabs>
+      </TabPane>
    </children>
    <padding>
       <Insets bottom="25.0" left="25.0" right="25.0" top="25.0" />
